--- a/src/App.css
+++ b/src/App.css
@@ -24,15 +24,33 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+
+#navigator{
+  display: flex;
+  height: 4em;
+  border-radius: .1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#about{
+  justify-content: center;
+  margin: auto;
+  width: 50%;
+  border-radius: 4em;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+a{
+  margin-left: 10px;
+  margin-right: 10px;
+  color: black
+}
+
+a:hover{
+  color: black;
+}
+
+a:visited{
+  color: black
 }
