Progress on Resume component. CSS changes

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,15 @@
 }
 
 
+.MuiButtonGroup-groupedText{
+  text-decoration: none;
+}
+
+canvas{
+  margin: auto;
+  outline : 1px solid black;
+}
+
 
 
 #navigator{
